tests/ui/attr-value-is-not-a-number.rs
use bilge::bitsize;

#[bitsize(...)]
enum Test {}

fn main() {}
